[gd_scene load_steps=4 format=3 uid="uid://pd7yq40np5lh"]

[ext_resource type="Script" path="res://LunchBowl.gd" id="1_jquhy"]
[ext_resource type="Texture2D" uid="uid://frv7w0f4r8d" path="res://lunch_bowl/lunch_bowl_food.png" id="2_61ihl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lhbcl"]
size = Vector2(37, 21)

[node name="LunchBowl" type="Node2D"]
position = Vector2(223, 154)
script = ExtResource("1_jquhy")

[node name="Sprites" type="Node2D" parent="."]
z_index = 10

[node name="background" type="Sprite2D" parent="Sprites"]
texture = ExtResource("2_61ihl")
vframes = 8

[node name="cooked_beans" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("2_61ihl")
vframes = 8
frame = 1

[node name="cooked_rice" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("2_61ihl")
vframes = 8
frame = 2

[node name="cooked_pasta" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("2_61ihl")
vframes = 8
frame = 3

[node name="cooked_chicken" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("2_61ihl")
vframes = 8
frame = 4

[node name="salad" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("2_61ihl")
vframes = 8
frame = 5

[node name="cooked_egg" type="Sprite2D" parent="Sprites"]
visible = false
texture = ExtResource("2_61ihl")
vframes = 8
frame = 6

[node name="foreground" type="Sprite2D" parent="Sprites"]
texture = ExtResource("2_61ihl")
vframes = 8
frame = 7

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_lhbcl")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
